--- a/ReadCard/Views/Home/_ListCard.cshtml
+++ b/ReadCard/Views/Home/_ListCard.cshtml
@@ -9,11 +9,13 @@
         </section>
         foreach (var item in (List<CCCDCardView>)ViewBag.ListCard)
         {
-            <section class="col-md-3 p-md-3 col-sm-12 col-lg-3 p-lg-3 col-xl-3 p-xl-3" aria-labelledby="gettingStartedTitle">
-                <div class="card m-auto" style="width: 18rem;">
-                    <img class="card-img-top img-thumbnail m-auto mt-2" style="max-width:200px;" src="data:image/png;base64,@item.CCCDCard.PersonDetails.faceImageBase64" alt="Card image cap">
+            <section class="col-md-4 col-sm-12 col-lg-3 p-lg-3 col-xl-3 p-xl-3 mb-2 mt-2 p-0 m-auto" aria-labelledby="gettingStartedTitle">
+                <div class="card m-auto">
+                    <img class="card-img-top img-thumbnail m-auto mt-2" style="max-width:250px;" src="data:image/png;base64,@item.CCCDCard.PersonDetails.faceImageBase64" alt="Card image cap">
                     <div class="card-body">
-                        <span><strong>FullName: </strong> @item.CCCDCard.PersonDetails.surname  @item.CCCDCard.PersonDetails.name</span>
+                        <span><strong>Name: </strong>  @item.CCCDCard.PersonDetails.name</span>
+                        <br />
+                        <span><strong>Surname: </strong> @item.CCCDCard.PersonDetails.surname</span>
                         <br />
                         <span><strong>Gender: </strong> @item.CCCDCard.PersonDetails.gender</span>
                         <br />
@@ -25,7 +27,11 @@
                         <br />
                         <span><strong>SerialNumber: </strong> @item.CCCDCard.PersonDetails.serialNumber</span>
                         <br />
-                        <span><strong>Surname: </strong> @item.CCCDCard.PersonDetails.surname</span>
+                        <span><strong>BirthDate: </strong> @item.CCCDCard.PersonDetails.birthDate</span>
+                        <br />
+                        <span><strong>ExpiryDate: </strong> @item.CCCDCard.PersonDetails.expiryDate</span>
+                        <br />
+                        <span><strong>UploadTime: </strong> @item.UploadTime.ToString("dd/MM/yyyy HH:mm:ss")</span>
                     </div>
                     <div class="card-footer">
                         <button class="btn btn-sm btn-danger btnDel" onclick="deleteCard(@item.ID);">
