--- a/ReadCard/Views/Home/_ListCard.cshtml
+++ b/ReadCard/Views/Home/_ListCard.cshtml
@@ -92,7 +92,7 @@
     }
 }
 
-<script>
+@*<script>
     function deleteCard(itemId) {
         $.ajax({
             method: "GET",
@@ -129,4 +129,4 @@
             }
         });
     }
-</script>
+</script>*@
