--- a/ReadCard/Views/Home/Index.cshtml
+++ b/ReadCard/Views/Home/Index.cshtml
@@ -2,7 +2,54 @@
     <button class="btn btn btn-danger mb-2" style="width:120px;" id="btnDeleteAll" onclick="deleteAllCard();"><i class="fa fa-trash"></i> Xóa tất cả</button>
     <hr />
 </div>*@
-<div class="row m-auto" id="divResult"></div>
+<style>
+    .scrollbar {
+        height: 78vh;
+        width: 100%;
+        background: #F5F5F5;
+        overflow-y: scroll;
+    }
+
+    /*
+ *  STYLE 5
+ */
+
+    #style-5::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+        background-color: #F5F5F5;
+    }
+
+    #style-5::-webkit-scrollbar {
+        width: 5px;
+        background-color: #F5F5F5;
+    }
+
+    #style-5::-webkit-scrollbar-thumb {
+        background-color: #0ae;
+        background-image: -webkit-gradient(linear, 0 0, 0 100%, color-stop(.5, rgba(255, 255, 255, .2)), color-stop(.5, transparent), to(transparent));
+    }
+
+    /*
+ *  STYLE 6
+ */
+
+    #style-6::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+        background-color: #F5F5F5;
+    }
+
+    #style-6::-webkit-scrollbar {
+        width: 7px;
+        background-color: #F5F5F5;
+    }
+
+    #style-6::-webkit-scrollbar-thumb {
+        background-color: #F90;
+        background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent)
+    }
+
+</style>
+<div class="" id="divResult"></div>
 
 
 @section Scripts{
@@ -25,8 +72,9 @@
                     const objectCards = ListC;
                     let htmlString = "";
                     htmlString += "<div class='row'>";
-                    htmlString += "<button class='btn btn btn-danger mb-2' style='width:150px;' id='btnDeleteAll' onclick='deleteAllCard();'><i class='fa fa-trash'></i> Delete all Item</button>";
+                    htmlString += "<button class='btn btn-link text-danger mb-2' style='width:150px;' id='btnDeleteAll' onclick='deleteAllCard();'><i class='fa fa-times'></i> Delete all Item</button>";
                     htmlString += "</div>";
+                    htmlString += "<div class='row scrollbar mt-1' id='style-6' style='background-color: #e9ecef;' >";
                     for (let i = 0; i < objectCards.length; i++) {
 
                         const datetimeString = objectCards[i].UploadTime;
@@ -34,12 +82,12 @@
 
                         const formattedDate = `${date.getDate().toString().padStart(2, '0')}-${(date.getMonth() + 1).toString().padStart(2, '0')}-${date.getFullYear().toString()} ${(date.getHours()).toString().padStart(2, '0')}:${(date.getMinutes()).toString().padStart(2, '0')}:${(date.getSeconds()).toString().padStart(2, '0')}`;
 
-                        htmlString += "<div class='col-sm-12 col-md-12 col-lg-12 col-xl-4 col-xxl-4'>";
+                        htmlString += "<div class='col-sm-12 col-md-12 col-lg-12 col-xl-4 col-xxl-4 mt-1'>";
                         htmlString += "<div class='card border-info bg-light d-flex flex-fill'>";
                         htmlString += "<div class='card-header text-muted border-bottom mb-2'>";
-                        htmlString += "<i class='fa fa-dot-circle-o text-danger'> " + formattedDate + "</i>";
+                        htmlString += "<i class='fa fa-dot-circle-o text-info-emphasis'> " + formattedDate + "</i>";
                         /*htmlString += "<div class='text-right'>";*/
-                        htmlString += "<button class='btn btn-sm btn-danger btnDel float-right' onclick='deleteCard(" + objectCards[i].ID + ");'>";
+                        htmlString += "<button class='btn btn-sm btn-link text-danger btnDel float-right' onclick='deleteCard(" + objectCards[i].ID + ");'>";
                         htmlString += "<i class='fa fa-times'></i>";
                         htmlString += "</button>";
                        /* htmlString += "</div>";*/
@@ -79,7 +127,7 @@
                         htmlString += "</div>";
                         htmlString += "</div>";
                     }
-
+                    htmlString += "</div>";
                     $("#divResult").html(htmlString);
                 }
 
@@ -126,7 +174,7 @@
             dataType: 'html',
             success: function (data) {
                 if (data >= 1) {
-                    console.log("Xóa thành công !");
+                    console.log("Xóa thành công: " + itemId);
                 }
                 else {
                     console.log("Xóa thất bại !");
